--- a/sources/web/html.html
+++ b/sources/web/html.html
@@ -33,10 +33,18 @@ function affichageConditionnel(bouton, id) {
 <header>
     <h1> ToKen </h1>
     <nav id="bandeau">
-        <a class="element" href="html.html">HTML</a>
-        <a class="element" href="css.html">CSS</a>
-        <a class="element" href="javascript.html">JAVASCRIPT</a>
-        <a class="element" href="php.html">PHP</a>
+        <div class="contour_a">
+            <a class="element" href="html.html">HTML</a>
+        </div>
+        <div class="contour_a">
+            <a class="element" href="css.html">CSS</a>
+        </div>
+        <div class="contour_a">
+            <a class="element" href="javascript.html">JAVASCRIPT</a>
+        </div>
+        <div class="contour_a">
+            <a class="element" href="php.html">PHP</a>
+        </div>
     </nav>
 </header>
 
@@ -66,8 +74,12 @@ function affichageConditionnel(bouton, id) {
 
   <h2>HTML</h2>
 
+    <div id="bandeau_sousTitre">
+      <p>S. Robin (mis à jour le 22 Fev. 2021)</p>
+    </div>
+
   <div id="bandeau_contenu">
-    <p>S. Robin on Feb. 22, 2021</p>
+    <p>L'essentiel du savoir-faire</p>
   </div>
 
   <section id="contenu">
