work on html.html

--- a/sources/web/html.html
+++ b/sources/web/html.html
@@ -75,7 +75,7 @@ function affichageConditionnel(bouton, id) {
   <h2>HTML</h2>
 
     <div id="bandeau_sousTitre">
-      <p>S. Robin (mis à jour le 22 Fev. 2021)</p>
+      <p>S. Robin (mis à jour le 01 Mar. 2021)</p>
     </div>
 
   <div id="bandeau_contenu">
